# GpuLdpcDecoder

./: CMakeLists.txt  mini.cpp
Report/: finalProject.tex
awgn_channel/: CChanel.h  CChanel_AWGN_SIMD.cu  Chanel.cpp  Chanel_AWGN_SIMD.cu
ber_analyzer/: ErrorAnalyzer.cpp  ErrorAnalyzer.h
decoder/: CGPUDecoder.cpp  CGPUDecoder.h  CGPU_Decoder_MS_SIMD.cu  CGPU_Decoder_MS_SIMD.h
decoder/cuda/: CUDA_MS_SIMD.cu
decoder_ms/: CGPU_Decoder_MS_SIMD.cu
decoder_ms/cuda/: CUDA_MS_SIMD.cu
matlab/: ber.m  c_2304_10.tiff  c_2304_5.tiff  c_4k_10.tiff  c_4k_5.tiff  c_576_10.tiff  c_576_5.tiff  scalable.m  scalable.m~
matrix/: code.h
presentation/: bsu.sty  ldpcGpu.tex
src/: CMakeLists.txt  mini.cpp
src/awgn_channel/: Chanel.h  Chanel_AWGN_SIMD.h
src/decoder/: CGPUDecoder.cpp  CGPUDecoder.h
src/decoder/cuda/: CUDA_MS_SIMD.cu
src/frame/: CFrame.cpp  CFrame.h
src/terminal/: CTerminal.cpp
terminal/: CTerminal.cpp  CTerminal.h
transpose/: GPU_Transpose_uint8.cu
